--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "dotenv": "^16.5.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
+    "mongoose": "^8.16.0",
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
